# odcs

./: .editorconfig  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  SPEC.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: checks.yml  ci.yml  release.yml
docs/: README.md  index.md  requirements.txt
docs/implementation/: README.md  api-stability.md  architecture.md  cli-spec.md  crate-layout.md  cross-file-references.md  diagnostics-guide.md  implementation-phases.md  model-guide.md  non-goals.md  overview.md  project-goal.md  public-api.md  registry.md  relationship-to-dtcs.md  rust-dependencies.md  spec-usage.md  testing-plan.md  validation-guide.md
docs/maintainer/: releasing.md
docs/project/: release-status.md
docs/upstream/: spec.md
docs/user/: api-guide.md  authoring.md  ci-cd.md  cli.md  compatibility.md  diagnostics.md  enterprise-evaluation.md  faq.md  getting-started.md  glossary.md  installation.md  migration-0.3.md  migration-0.4.md  migration.md  python.md  registry.md  rust.md  troubleshooting.md  what-is-odcs.md
examples/: README.md  minimal.odcs.json  minimal.odcs.yaml  with-extensions.yaml  with-relationships.yaml  with-schema-quality.yaml  with-servers.yaml  with-team.yaml
examples/registry/: README.md  consumer.yaml  provider.yaml
python/odcs/: __init__.py  __main__.py
python/pyodcs/: __init__.py  __main__.py
python/tests/: test_pyodcs.py
schema/: odcs-v3.1.0.json
scripts/: check-doc-versions.sh  check.sh  sync-upstream-examples.sh
src/: contract_set.rs  lib.rs  python.rs  schema.rs
src/cli/: mod.rs
src/compatibility/: mod.rs
src/diagnostics/: builders.rs  category.rs  codes.rs  diagnostic.rs  mod.rs  report.rs  severity.rs  stage.rs  validation_phase.rs
src/model/: contract.rs  custom.rs  field.rs  fundamentals.rs  mod.rs  pricing.rs  quality.rs  relationships.rs  roles.rs  schema.rs  servers.rs  shared.rs  sla.rs  stakeholders.rs  support.rs  team.rs  versioning.rs
src/parser/: duplicate_keys.rs  json.rs  mod.rs  yaml.rs
src/registry/: entry.rs  local.rs  mod.rs  scan.rs
src/validation/: dedup.rs  document.rs  extensions.rs  helpers.rs  ids.rs  json_schema.rs  mod.rs  phases.rs  quality.rs  references.rs  schema.rs  schema_index.rs  sections.rs  servers.rs  structural.rs
tests/: cli.rs  compatibility.rs  cross_file.rs  diagnostic_metadata.rs  json_schema_conformance.rs  registry.rs  skeleton.rs  spec_parity.rs  validation_negative.rs
tests/common/: mod.rs
tests/fixtures/: invalid-duplicate-key.json  invalid-duplicate-key.yaml  invalid-empty-name.yaml  invalid-extension-duplicate.yaml  invalid-extension-empty-key.yaml  invalid-json-schema-only.yaml  invalid-kind.yaml  invalid-logical-type.yaml  invalid-lone-team-member.yaml  invalid-nested-duplicate-key.json  invalid-nested-duplicate-key.yaml  invalid-nested-property-ref.yaml  invalid-pricing-missing-currency.yaml  invalid-pricing-negative-amount.yaml  invalid-quality-between-length.yaml  invalid-quality-deprecated-rule-only.yaml  invalid-quality-dimension.yaml  invalid-quality-empty-rule.yaml  invalid-quality-empty-sql-query.yaml  invalid-quality-mustbe-only.yaml  invalid-quality-no-type-bad-metric.yaml  invalid-quality-unknown-type.yaml  invalid-relationship-bad-format.yaml  invalid-relationship-dangling.yaml  invalid-relationship-empty-composite.yaml  invalid-stable-id.yaml  (+44 more)
(+14 files in other folders)
