[build-system]
requires = ["maturin>=1.0,<2"]
build-backend = "maturin"

[project]
name = "pyodcs"
version = "0.3.0"
description = "Reference implementation of the Open Data Contract Standard (ODCS)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["odcs", "pyodcs", "data-contract", "contracts", "validation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/odcs/odcs"
Repository = "https://github.com/odcs/odcs"
Documentation = "https://docs.rs/odcs"

[project.scripts]
pyodcs = "pyodcs.__main__:main"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "pyodcs._native"
